--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,8 @@
         "unordered_map": "cpp",
         "xhash": "cpp",
         "fstream": "cpp",
-        "set": "cpp"
-    }
+        "set": "cpp",
+        "optional": "cpp"
+    },
+    "makefile.configureOnOpen": false
 }
