Created first attempt at a QuadTree for optimising collision detection

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,8 @@
                 "src/GUI.cpp",
                 "src/EntityManager.cpp",
                 "src/Systems.cpp",
+                "src/QuadTree.cpp",
+                "src/QuadTreeNode.cpp",
                 "-lmingw32", "-lSDL2main", "-lSDL2", "-lSDL2_image",
                 "-g" // Enable debugging symbols
             ],
