Corrected quadtree entity distribution and initialisation problems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,8 @@
         "xhash": "cpp",
         "fstream": "cpp",
         "set": "cpp",
-        "optional": "cpp"
+        "optional": "cpp",
+        "unordered_set": "cpp"
     },
     "makefile.configureOnOpen": false
 }
